--- a/.gitignore
+++ b/.gitignore
@@ -31,12 +31,9 @@ bld/
 [Ll]og/
 [Ll]ogs/
 [Bb]uild/CoronaLauncher.exe
-[Bb]uild/CoronaLauncher.exe.config
 [Bb]uild/CoronaLauncher.exe.pdb
-[Bb]uild/Panuon.UI.Silver.dll
-[Bb]uild/Lyi.dll
-[Bb]uild/CrazyEditor.dll
-[Bb]uild/EasyHook32.dll
+[Bb]uild/*.dll
+[Bb]uild/*.xml
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
