--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ bld/
 ![Bb]uild/Lyi.dll
 ![Bb]uild/CrazyEditor.dll
 [Bb]uild/CoronaLauncher.exe
+![Bb]uild/CoronaLauncher.exe.config
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
