--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ bld/
 [Bb]uild/*.dll
 ![Bb]uild/Lyi.dll
 ![Bb]uild/CrazyEditor.dll
+![Bb]uild/EasyHook32.dll
+![Bb]uild/zstd.dll
 [Bb]uild/CoronaLauncher.exe
 ![Bb]uild/CoronaLauncher.exe.config
 
