--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ bld/
 
 #build folder
 [Bb]uild/net472/
+[Bb]uild/net5.0-windows/
 [Bb]uild/*.xml
 ![Bb]uild/CoronaLauncher.VisualElementsManifest.xml
 [Bb]uild/*.dll
