重新组织第三方库，支持“干净”发布

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+/source/CoronaLauncher/Properties/launchSettings.json
