--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ bld/
 #build folder
 [Bb]uild/net472/
 [Bb]uild/net5.0-windows/
+[Bb]uild/net6.0-windows/
 [Bb]uild/*.xml
 ![Bb]uild/CoronaLauncher.VisualElementsManifest.xml
 [Bb]uild/*.dll
