Update and rename source/NativeHost/CMakeLists.txt to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,10 @@ set(VCPKG_TARGET_TRIPLET "x86-windows-static")
 # 声明我们的项目
 project(NativeHost)
 
-# 找到 NET Host 以及WIL（一个方便调用 Win32 API 的库）的库
+# 第三方库
+# NET Host，在 C++ 程序里启动 .NET 运行时
 find_package(unofficial-nethost CONFIG REQUIRED)
+# WIL,一个方便调用 Win32 API 的库
 find_package(wil CONFIG REQUIRED)
 
 # 创建一个编译到 exe 的目标
@@ -17,10 +19,15 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded
 # 为我们的目标启用 C++20
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 # 定义宏 - 定义 WIN32_LEAN_AND_MEAN 可以去除掉 Windows.h 里各种不必要的内容
-target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32_LEAN_AND_MEAN)
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    WIN32_LEAN_AND_MEAN
+)
 # 链接依赖
 target_link_libraries(${PROJECT_NAME} PRIVATE Comctl32.lib)
-target_link_libraries(${PROJECT_NAME} PRIVATE unofficial::nethost::nethost WIL::WIL)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    unofficial::nethost::nethost
+    WIL::WIL
+)
 # 源码
 target_sources(${PROJECT_NAME} PRIVATE
     main.cpp gui.ixx hostfxr.ixx error_handling.ixx
@@ -31,5 +38,5 @@ target_sources(${PROJECT_NAME} PRIVATE resource.h gui.rc)
 # 应用清单
 target_sources(${PROJECT_NAME} PRIVATE app.manifest)
 
-# 在执行 CMake install 步骤的时候，把产生的 exe 复制到定义的地方
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ".")
+# （暂时被禁用）在执行 CMake install 步骤的时候，把产生的 exe 复制到定义的地方
+# install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ".")
