--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿cmake_minimum_required(VERSION 3.17)
 project(NativeHost)
 
-# 第三方库（参见 vcpkg.json）
+# 第三方库（见 vcpkg.json）
 # NET Host，在 C++ 程序里启动 .NET 运行时
 find_package(unofficial-nethost CONFIG REQUIRED)
 # WIL,一个方便调用 Win32 API 的库
@@ -38,5 +38,5 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
     WIL::WIL
 )
 
-# （暂时被禁用）在执行 CMake install 步骤的时候，把产生的 exe 复制到定义的地方
-# install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ".")
+# 在执行 CMake install 步骤的时候，把生成的 exe 复制到指定的地方
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ".")
