--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,5 +41,5 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           # A file, directory or wildcard pattern that describes what to upload
-          path: out/
+          path: out/install
           if-no-files-found: warn
