--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,8 +35,7 @@ jobs:
           # The name of the configure preset.
           configurePreset: 'msvc-release'
           # Build with MSVC release and then install.
-          buildPreset: 'build-msvc-release'
-          buildPresetCmdString: '--target install'
+          buildPreset: 'publish-msvc-release'
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
